fixed a bug where, on smaller desktop screens, the bottom of the footer was invisible

--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -23,10 +23,6 @@ footer {
 			}
 	}
 	
-	@mixin atLarge {
-		height: 40vh;
-	}
-	
 	.footer__content {
 		height: 100%;
 		margin-top: 200px;
